[project]
name = "gpt2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.5.0",
    "ipykernel>=7.2.0",
    "lm-eval>=0.4.11",
    "nbformat>=5.10.4",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "plotly>=6.6.0",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "transformers>=5.1.0",
    "wandb>=0.25.0",
]
