[project]
name = "gpt2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.5.0",
    "huggingface-hub>=1.4.1",
    "ipykernel>=7.2.0",
    "lm-eval>=0.4.11",
    "nbformat>=5.10.4",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "peft>=0.19.1",
    "plotly>=6.6.0",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "transformers>=5.1.0",
    "trl>=0.29.1",
    "wandb>=0.25.0",
]
