[project]
name = "gpt2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.5.0",
    "flash-attn",
    "huggingface-hub>=1.4.1",
    "ipykernel>=7.2.0",
    "lm-eval>=0.4.11",
    "nbformat>=5.10.4",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "peft>=0.19.1",
    "plotly>=6.6.0",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "transformers>=5.1.0",
    "trl>=0.29.1",
    "wandb>=0.25.0",
]

[tool.uv]
no-build-isolation-package = ['flash-attn', 'setuptools']

[tool.uv.sources]
flash-attn = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.0/flash_attn-2.8.3+cu128torch2.10-cp314-cp314-linux_x86_64.whl" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "snakeviz>=2.2.2",
]
